adicionamos mais uma parte de texto no nosso código

--- a/aula1/index.html
+++ b/aula1/index.html
@@ -6,6 +6,6 @@
   <title> curso </title>
 </head>
 <body>
-  <h1>Meu Primeiro Curso Com mais uma commit</h1>
+  <h1>Meu Primeiro Curso Com mais uma commit.</h1>
 </body>
 </html>
