--- a/cursin/index.html
+++ b/cursin/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> curso </title>
+  <title>cursin</title>
 </head>
 <body>
-  <h1>Meu Primeiro Curso Com mais uma commit.</h1>
+  <h1>Meu Primeiro Curso</h1>
 </body>
 </html>
